--- a/config/config.yaml
+++ b/config/config.yaml
@@ -54,6 +54,23 @@ database:
     queryFields: false
     skipDefaultTransaction: false
 
+  foo:
+    allowGlobalUpdate: false
+    createBatchSize: 0
+    database: mysql
+    disableAutomaticPing: false
+    disableForeignKeyConstraintWhenMigrating: false
+    disableNestedTransaction: false
+    dryRun: false
+    dsn: root@tcp(127.0.0.1:3306)/app?charset=utf8mb4&parseTime=True&loc=Local
+    fullSaveAssociations: false
+    namingStrategy:
+      singularTable: false
+      tablePrefix: ""
+    prepareStmt: false
+    queryFields: false
+    skipDefaultTransaction: false
+
 # The version of the application
 version: 0.1.0
 
